--- a/domain.conf
+++ b/domain.conf
@@ -2,11 +2,12 @@ server
     {
         listen 80;
         #listen [::]:80;
-        server_name gog.vong.one ;
+        server_name $domain ;
         index index.html index.htm index.php default.html default.htm default.php;
-        root  /home/wwwroot/gog.vong.one;
+        root  /home/wwwroot/$domain;
 
-        include rewrite/none.conf;
+        return      301 https://$domain$request_uri;
+
         #error_page   404   /404.html;
 
         # Deny access to PHP files in specific directory
@@ -40,12 +41,12 @@ server
     {
         listen 443 ssl http2;
         #listen [::]:443 ssl http2;
-        server_name gog.vong.one ;
+        server_name $domain ;
         index index.html index.htm index.php default.html default.htm default.php;
-        root  /home/wwwroot/gog.vong.one;
+        root  /home/wwwroot/$domain;
 
-        ssl_certificate /usr/local/nginx/conf/ssl/gog.vong.one/fullchain.cer;
-        ssl_certificate_key /usr/local/nginx/conf/ssl/gog.vong.one/gog.vong.one.key;
+        ssl_certificate /usr/local/nginx/conf/ssl/$domain/fullchain.cer;
+        ssl_certificate_key /usr/local/nginx/conf/ssl/$domain/$domain.key;
         ssl_session_timeout 5m;
         ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
         ssl_prefer_server_ciphers on;
@@ -89,12 +90,12 @@ location /
         {
             expires 0;
         }
-        proxy_pass https://www.gog.com/;
-        proxy_set_header Host www.gog.com;
+        proxy_pass https://$proxydomain/;
+        proxy_set_header Host $proxydomain;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header REMOTE-HOST $remote_addr;
-    
+
         #持久化连接相关配置
         #proxy_connect_timeout 30s;
         #proxy_read_timeout 86400s;
@@ -105,12 +106,12 @@ location /
         add_header X-Cache $upstream_cache_status;
     }
 
-location /827673334 
+location /827673334
     {
 
         proxy_redirect off;
 
-        #proxy_pass http://127.0.0.1:6005;
+        #proxy_pass http://127.0.0.1:$port;
 
     proxy_http_version 1.1;
 
@@ -121,9 +122,9 @@ location /827673334
     proxy_set_header Host $http_host;
 
     proxy_intercept_errors on;
-    
+
     if ($http_upgrade = "websocket" )
     {
-        proxy_pass http://127.0.0.1:6005;}
+        proxy_pass http://127.0.0.1:$port;}
         }
     }
