--- a/domain.conf
+++ b/domain.conf
@@ -106,7 +106,7 @@ location /
         add_header X-Cache $upstream_cache_status;
     }
 
-location /827673334
+location $path
     {
 
         proxy_redirect off;
